--- a/steamAPI/src/main/resources/application.properties
+++ b/steamAPI/src/main/resources/application.properties
@@ -1,1 +1,33 @@
+
 spring.application.name=steamAPI
+
+
+spring.datasource.url=jdbc:mysql://localhost:3306/steam_db?serverTimezone=UTC&useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.username=xXGaben420NoScopeMLGBlazeIt720xX
+spring.datasource.password=
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.jdbc.batch_size=50
+spring.jpa.properties.hibernate.order_inserts=true
+spring.jpa.properties.hibernate.order_updates=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.minimum-idle=5
+spring.datasource.hikari.idle-timeout=30000
+spring.datasource.hikari.connection-timeout=20000
+spring.datasource.hikari.max-lifetime=1800000
+
+logging.level.org.springframework=INFO
+logging.level.com.paucasesnoves.steamAPI=DEBUG
+logging.level.org.hibernate.SQL=WARN
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=WARN
+
+
+server.port=8080
+server.error.include-stacktrace=never
