--- a/steamAPI/src/main/resources/application.properties
+++ b/steamAPI/src/main/resources/application.properties
@@ -11,17 +11,14 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.jdbc.batch_size=50
-spring.jpa.properties.hibernate.order_inserts=true
-spring.jpa.properties.hibernate.order_updates=true
+
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 
 spring.datasource.hikari.maximum-pool-size=10
 spring.datasource.hikari.minimum-idle=5
 spring.datasource.hikari.idle-timeout=30000
-spring.datasource.hikari.connection-timeout=20000
-spring.datasource.hikari.max-lifetime=1800000
+
 
 logging.level.org.springframework=INFO
 logging.level.com.paucasesnoves.steamAPI=DEBUG
@@ -31,3 +28,19 @@ logging.level.org.hibernate.type.descriptor.sql.BasicBinder=WARN
 
 server.port=8080
 server.error.include-stacktrace=never
+
+
+spring.jpa.properties.hibernate.jdbc.batch_size=100
+spring.jpa.properties.hibernate.order_inserts=true
+spring.jpa.properties.hibernate.order_updates=true
+spring.jpa.properties.hibernate.jdbc.batch_versioned_data=true
+
+spring.jpa.properties.hibernate.cache.use_second_level_cache=false
+spring.jpa.properties.hibernate.cache.use_query_cache=false
+
+
+spring.datasource.hikari.connection-timeout=60000
+spring.datasource.hikari.validation-timeout=3000
+spring.datasource.hikari.max-lifetime=600000
+
+spring.session.store-type=none
