4. Importacio un poc mes fast

--- a/steamAPI/src/main/resources/application.properties
+++ b/steamAPI/src/main/resources/application.properties
@@ -1,46 +1,57 @@
-
-spring.application.name=steamAPI
-
-
 spring.datasource.url=jdbc:mysql://localhost:3306/steam_db?serverTimezone=UTC&useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.username=xXGaben420NoScopeMLGBlazeIt720xX
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 
+spring.application.name=steamAPI
+
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=true
 
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
 
-spring.datasource.hikari.maximum-pool-size=10
-spring.datasource.hikari.minimum-idle=5
-spring.datasource.hikari.idle-timeout=30000
+spring.session.jdbc.initialize-schema=always
 
+
+server.port=8080
+server.error.include-stacktrace=never
 
 logging.level.org.springframework=INFO
 logging.level.com.paucasesnoves.steamAPI=DEBUG
 logging.level.org.hibernate.SQL=WARN
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=WARN
 
-
-server.port=8080
-server.error.include-stacktrace=never
-
-
-spring.jpa.properties.hibernate.jdbc.batch_size=100
+# ========== OPTIMIZACIONES DE RENDIMIENTO ==========
+# Aumentar tamaño de lote
+spring.jpa.properties.hibernate.jdbc.batch_size=1000
 spring.jpa.properties.hibernate.order_inserts=true
 spring.jpa.properties.hibernate.order_updates=true
 spring.jpa.properties.hibernate.jdbc.batch_versioned_data=true
 
+# Deshabilitar cachés innecesarios
 spring.jpa.properties.hibernate.cache.use_second_level_cache=false
 spring.jpa.properties.hibernate.cache.use_query_cache=false
 
+# Optimizar conexión MySQL
+spring.datasource.hikari.maximum-pool-size=20
+spring.datasource.hikari.minimum-idle=10
+spring.datasource.hikari.connection-timeout=30000
+spring.datasource.hikari.max-lifetime=1800000
+spring.datasource.hikari.idle-timeout=600000
 
-spring.datasource.hikari.connection-timeout=60000
-spring.datasource.hikari.validation-timeout=3000
-spring.datasource.hikari.max-lifetime=600000
+# Deshabilitar validación de esquema para importación
 
+spring.jpa.properties.hibernate.hbm2ddl.auto=update
+
+# Deshabilitar Spring Session (está causando errores)
 spring.session.store-type=none
+
+# Deshabilitar logging pesado
+
+logging.level.org.springframework.jdbc.core=OFF
+logging.level.org.springframework.transaction=OFF
+
+# Mantener solo logs importantes
